dataset1235/2025-2/2318198438/users/2721560707/executions/1897677159_3902794658.log
== SUBMISSION (2025-08-21 00:40:06)
-- CODE: 
nome = input("Coloque o nome: ")
idade = int(input("Coloque a idade: "))
altura = float(input("Coloque a altura: "))

print("Nome:", nome)
pint("Idade:", idade)
print("Altura:", altura) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:39:46)
-- CODE: 
nome = input("Coloque o nome: ")
idade = int(input("Coloque a idade: "))
altura = float(input("Coloque a altura: "))

print("Nome:", nome)
pint("Idade:", idade)
print("Altura:", altura) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:37:28)
-- CODE: 
nome = input("Coloque o nome")
idade = int(input("Coloque idade"))
altura = float(input("Coloque altura"))

print("Nome:", nome)
pint("Idade:", idade)
print("Altura:", altura) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 00:38:14)
-- CODE: 
nome = input("Coloque o nome: ")
idade = int(input("Coloque idade: "))
altura = float(input("Coloque altura: "))

print("Nome:", nome)
pint("Idade:", idade)
print("Altura:", altura) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:41:08)
-- CODE: 
nome = input("Coloque o nome: ")
idade = int(input("Coloque a idade: "))
altura = float(input("Coloque a altura: "))

print("Nome:", nome)
print("Idade:", idade)
print("Altura:", altura) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura: 1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 04:30:07)
-- CODE: 
nome = input("Coloque o nome: ")
idade = int(input("Coloque a idade: "))
altura = float(input("Coloque a altura: "))

print("Nome:", nome)
print("Idade:", idade)
print("Altura:", altura) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura: 1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:38:15)
-- CODE: 
nome = input("Coloque o nome: ")
idade = int(input("Coloque idade: "))
altura = float(input("Coloque altura: "))

print("Nome:", nome)
pint("Idade:", idade)
print("Altura:", altura) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 00:41:21)
-- CODE: 
nome = input("Coloque o nome: ")
idade = int(input("Coloque a idade: "))
altura = float(input("Coloque a altura: "))

print("Nome:", nome)
print("Idade:", idade)
print("Altura:", altura) 
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura: 1.89
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 00:40:34)
-- CODE: 
nome = input("Coloque o nome: ")
idade = int(input("Coloque a idade: "))
altura = float(input("Coloque a altura: "))

print("Nome:", nome)
pint("Idade:", idade)
print("Altura:", altura) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 00:39:19)
-- CODE: 
nome = input("Coloque o nome: ")
idade = int(input("Coloque idade: "))
altura = float(input("Coloque altura: "))

print("Nome:", nome)
pint("Idade:", idade)
print("Altura:", altura) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 00:40:53)
-- CODE: 
nome = input("Coloque o nome: ")
idade = int(input("Coloque a idade: "))
altura = float(input("Coloque a altura: "))

print("Nome:", nome)
pint("Idade:", idade)
print("Altura:", altura) 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pint("Idade:", idade)
    ^^^^
NameError: name 'pint' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
